--- a/main.css
+++ b/main.css
@@ -48,7 +48,7 @@ img {
   font-family: "Roboto Slab", serif;
   text-transform: uppercase;
   text-shadow: 0 -1px 0, 0 1px 0 #2e2e2e, 0 2px 0 #2c2c2c, 0 3px 0 #2a2a2a,
-    0 4px 0 #282828, 0 5px 0 #161616, 0 6px 0 #141414, 0 7px 0 #121212,
+    0 4px 0 #282828, 0 5px 0 #ffffff, 0 6px 0 #ffffff, 0 7px 0 #ffffff,
     0 22px 30px rgba(0, 0, 0, 0.9);
   font-size: 2rem;
   width: 100%;
@@ -64,6 +64,7 @@ img {
   margin: 0;
   top: 0;
   border-radius: 0;
+  border-bottom: black;
 }
 
 .nav a {
@@ -316,5 +317,15 @@ section:nth-child(odd) {
 
   body {
     font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 1500px) {
+  section {
+    width: 1300px;
+  }
+
+  .bio {
+    width: 1300px;
   }
 }
