--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
   font-family: "Blinker", sans-serif;
+  border-radius: 2px;
   color: rgb(10, 43, 23);
 }
 
@@ -13,6 +14,10 @@ body {
 
 main {
   margin-top: 3rem;
+}
+
+.headline {
+  text-align: center;
 }
 
 a.anchor {
@@ -134,6 +139,7 @@ section {
 
 .cv-block {
   background-color: white;
+  padding: 10px;
 }
 
 .flex {
