--- a/main.css
+++ b/main.css
@@ -79,14 +79,41 @@ img {
   z-index: 3;
   margin: 0;
   top: 0;
+  left: 0;
   border-radius: 0;
   border-bottom: black;
 }
 
-.nav a {
-  display: block;
-  text-decoration: none;
+.menu-btn {
+  background-color: rgb(10, 43, 23);
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  float: right;
+  width: 87px;
+}
+
+.menu {
   display: none;
+  position: absolute;
+  right: 0;
+  background-color: #f1f1f1;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.menu a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.show {
+  display: block;
+  top: 51px;
 }
 
 header {
@@ -154,139 +181,18 @@ section:nth-child(odd) {
   background-color: rgba(221, 221, 221, 0.295);
 }
 
-.nav ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  overflow: hidden;
-  background-color: #fff;
-  border-radius: 0;
-}
-
-.nav li {
-  list-style: none;
-}
-
-.nav li a {
-  display: block;
-  padding: 20px 20px;
-  border-right: 1px solid #f4f4f4;
-  text-decoration: none;
-}
-
-.nav li a:hover,
-.nav .menu-btn:hover {
-  background-color: #f4f4f4;
-}
-
-/* menu */
-
-.nav .menu {
-  clear: both;
-  max-height: 0;
-  transition: max-height 0.2s ease-out;
-}
-
-/* menu icon */
-
-.nav .menu-icon {
-  cursor: pointer;
-  float: right;
-  padding: 28px 20px;
-  position: relative;
-  user-select: none;
-}
-
-.nav .menu-icon .navicon {
-  background: #333;
-  display: block;
-  height: 2px;
-  position: relative;
-  width: 18px;
-}
-
-.nav .menu-icon .navicon:before,
-.nav .menu-icon .navicon:after {
-  background: #333;
-  content: "";
-  display: block;
-  height: 100%;
-  position: absolute;
-  transition: all 0.2s ease-out;
-  width: 100%;
-}
-
-.nav .menu-icon .navicon:before {
-  top: 5px;
-}
-
-.nav .menu-icon .navicon:after {
-  top: -5px;
-}
-
-/* menu btn */
-
-.nav .menu-btn {
-  display: none;
-}
-
-.nav .menu-btn:checked ~ .menu {
-  max-height: 240px;
-}
-
-.nav .menu-btn:checked ~ .menu-icon .navicon {
-  background: transparent;
-}
-
-.nav .menu-btn:checked ~ .menu-icon .navicon:before {
-  transform: rotate(-45deg);
-}
-
-.nav .menu-btn:checked ~ .menu-icon .navicon:after {
-  transform: rotate(45deg);
-}
-
-.nav .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
-.nav .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
-  top: 0;
-}
-
-.nav .menu-btn ~ .menu {
-  display: none;
-}
-
-.nav .menu-btn:checked ~ .menu {
-  display: block;
-}
-
 /* 48em = 768px */
 
 @media (min-width: 48em) {
-  .nav li {
-    float: left;
-  }
-  .nav li a {
-    padding: 20px 30px;
-  }
-  .nav .menu {
-    display: block;
-    clear: none;
-    float: right;
-    max-height: none;
-  }
-  .nav .menu-icon {
-    display: none;
-  }
-
-  .nav .menu-btn ~ .menu {
-    display: block;
-  }
-
   .name span {
     font-family: "Roboto Slab", serif;
     font-size: 4rem;
     width: 100%;
     text-align: center;
+  }
+
+  .menu-btn {
+    width: 114px;
   }
 
   body {
